--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/project-track-edit-form.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/project-track-edit-form.html.twig
@@ -16,25 +16,28 @@
  */
 #}
 {% extends '@itkdev_project_theme/content-wrapper.html.twig' %}
-
 {% block content %}
   <div class="container bg-white dark:bg-secondary my-4 drop-shadow-md">
     <header class="flex justify-between px-4 py-4 border-b">
       <h2 class="m-0 text-lg dark:text-white">{{ 'Status'|t }}</h2>
     </header>
-    <div class="flex justify-between px-4 py-4">
-      {{ form|without('advanced') }}
+    <div class="grid grid-cols-2 gap-16 px-4 py-4">
+      <div class="full-width">
+        {{ form.project_track_evaluation }}
+        {{ form.project_track_status }}
+      </div>
+      <div>
+        {{ form|without('advanced', 'project_track_evaluation', 'project_track_status') }}
+      </div>
     </div>
   </div>
   <div class="grid grid-cols-2 gap-4">
     {% for key, projectTrackTool in form['#project_tools'] %}
       <div class="tool-wrapper">
         <div class="container bg-white dark:bg-secondary my-4 drop-shadow-md">
-          <header class="flex justify-between px-4 py-4 border-b">
-            <h2 class="m-0 text-lg dark:text-white">{{ 'title' }}</h2>
-          </header>
+          {{ include('@itkdev_project_theme/components/project-track-tool-header.html.twig') }}
           <div class="px-4 py-4">
-            {{ dump(projectTrackTool.getToolData) }}
+            {{ drupal_entity(projectTrackTool.getToolEntityType, projectTrackTool.getToolId) }}
             <div class="flex justify-end">
               <a href="{{ url('entity.webform_submission.edit_form', {webform: 'complexity_uncertainty_default', webform_submission: projectTrackTool.getToolId}) }}" class="inline-block btn-primary bg-black text-white hover:bg-stone-700">
                 <i class="fa-solid fa-pencil"></i><span class="ml-3">{{ 'Edit'|t }}</span>
