--- a/web/themes/custom/itkdev/itkdev_project_theme/templates/node-edit-form.html.twig
+++ b/web/themes/custom/itkdev/itkdev_project_theme/templates/node-edit-form.html.twig
@@ -3,7 +3,7 @@
  * @file
  * Default theme implementation for a node edit form.
  *
- * Two column template for the node add/edit form.
+ * The template for the node add/edit form.
  *
  * This template will be used when a node edit form specifies 'node_edit_form'
  * as its #theme callback.  Otherwise, by default, node add/edit forms will be
